<resources>
    <string name="app_name">Quiz App</string>
    <string name="q2">2.) When were Buda, Pest and Obuda merged to form the city of Budapest?</string>
    <string name="q1">1.) What is the main river traversing Hungary from west to east?</string>
    <string name="q3">3.) What is the approximate population of Hungary (2009 estimate)?</string>
    <string name="q4">4.) Hungary has a common border with seven other countries.Which of the following does it NOT border on?</string>
    <string name="q5">5.) Which group (or family) of languages does Hungarian belong to?</string>
    <string name="q6">6.) Approximately when was Hungary under (virtually continuous) Habsburg rule?</string>
    <string name="q7">7.) When did the Hungarians rise in revolt against Soviet rule?</string>
    <string name="q8">8.) Who were Hungarian scientist?</string>
    <string name="_1817">1817</string>
    <string name="_1873">1873</string>
    <string name="_1948">1948</string>
    <string name="_1920">1920</string>
    <string name="_5_3_million">5.3 million</string>
    <string name="_15_million">15 million</string>
    <string name="_10_million">10 million</string>
    <string name="_8_million">8 million</string>
    <string name="ukraine">Ukraine</string>
    <string name="bosnia">Bosnia</string>
    <string name="croatia">Croatia</string>
    <string name="romania">Romania</string>
    <string name="finno_ugric">Finno-Ugric</string>
    <string name="slavonic">Slavonic</string>
    <string name="germanic">Germanic</string>
    <string name="turkic">Turkic</string>
    <string name="_1699_1918">1699-1918</string>
    <string name="_1537_1919">1537-1919</string>
    <string name="_1602_1944">1602-1944</string>
    <string name="_1440_1918">1440-1918</string>
    <string name="_1956">1956</string>
    <string name="_1968">1968</string>
    <string name="_1953">1953</string>
    <string name="_1969">1969</string>
    <string name="neumann_j_nos">Neumann János</string>
    <string name="e_tv_s_lor_nd">Eötvös Loránd</string>
    <string name="pusk_s_tivadar">Puskás Tivadar</string>
    <string name="joseph_needham">Joseph Needham</string>
    <string name="submit_answers">Submit Answers</string>
    <string name="reset">Reset</string>
    <string name="name">Name</string>
</resources>
